kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: vibe-social
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: vibe-social.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /documentation(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: documentation
                port:
                  number: 80
          - path: /event-tracking(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: event-tracking
                port:
                  number: 80
          - path: /location-discovery(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: location-discovery
                port:
                  number: 80
